# godot-video-converter

./: .gitignore  LICENSE  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  pyproject.toml  renderer.js  vite.main.config.ts  vite.renderer.config.ts
api/: godot_video_converter.py  main.py  run.py
backend/: main.py  run.py
src/: App.tsx  index.css  main.ts  renderer.ts  vite-env.d.ts
src/components/: video.tsx
src/components/DropArea/: DropArea.module.css  DropArea.tsx
src/components/MainButton/: MainButton.module.css  MainButton.tsx
src/components/SecondaryButton/: SecondaryButton.module.css  SecondaryButton.tsx
src/components/Video/: Video.module.css  Video.tsx
src/scripts/: front_service.ts
src/services/: FrontService.ts
src/types/: video.ts
